--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Released   : 20130902
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title></title>
+<title>Mariscos Pablo</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
@@ -27,15 +27,15 @@ Released   : 20130902
 <div id="page" class="container">
 	<div id="header">
 		<div id="logo">
-			<img src="images/" alt="" />
-			<h1><a href="#">Privy</a></h1>
-			<span>Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a></span>
+			<img src="images/pablorecio.jpg" alt="" />
+			<h1><a href="#">Mariscos Pablo</a></h1>
+			<span> <a href="" rel="nofollow"></a></span>
 		</div>
 		<div id="menu">
 			<ul>
 				<li class="current_page_item"><a href="#" accesskey="1" title="">Página principal</a></li>
 				<li><a href="#" accesskey="2" title="">Tarifas</a></li>
-				<li><a href="#" accesskey="3" title="">Sobre nosotros</a></li>
+				<li><a href="#" accesskey="3" title="">Todo sobre nosotros</a></li>
 				<li><a href="#" accesskey="5" title="">Contáctanos</a></li>
 			</ul>
 		</div>
