--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Released   : 20130902
 		<div id="menu">
 			<ul>
 				<li class="current_page_item"><a href="#" accesskey="1" title="">Página principal</a></li>
-				<li><a href="#" accesskey="2" title="">Tarifas</a></li>
+				<li><a href="facturas.html#"2" title="">Tarifas</a></li>
 				<li><a href="#" accesskey="3" title="">Todo sobre nosotros</a></li>
 				<li><a href="#" accesskey="5" title="">Contáctanos</a></li>
 			</ul>
