--- a/datos .html
+++ b/datos .html
@@ -34,8 +34,8 @@ Released   : 20130902
 		<div id="menu">
 			<ul>
 				<li><a href="index.html#"1" title="">Página principal</a></li>
-				<li class="current_page_item"><a href="facturas.html#"2" title="">Tarifas</a></li>
-				<li><a href="#" accesskey="3" title="">Todo sobre nosotros</a></li>
+				<li><a href="facturas.html#"2" title="">Tarifas</a></li>
+				<li class="current_page_item">li><a href="Todo sobre nosotros.html#"3" title="">Todo sobre nosotros</a></li>
 				<li><a href="#" accesskey="5" title="">Contáctanos</a></li>
 			</ul>
 		</div>
@@ -46,8 +46,8 @@ Released   : 20130902
 		</div>
 		<div id="welcome">
 			<div class="title">
-				<h2>TARIFAS</h2>
-				<span class="byline">Los peores productos calidad precio</span>
+				<h2>Todo sobre nosotros</h2>
+				<span class="byline">(Licenciado en timadura de pelo)</span>
 			</div>
 			<p>This is <strong>Privy</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p>
 			<ul class="actions">
