--- a/contactos.html
+++ b/contactos.html
@@ -33,10 +33,10 @@ Released   : 20130902
 		</div>
 		<div id="menu">
 			<ul>
-				<li><a href="index.html#"1" title="">P√°gina principal</a></li>
+				<li><a href="index.html" accesskey="1" title="">P·gina principal</a></li>
 				<li><a href="facturas.html#"2" title="">Tarifas</a></li>
-				<li class="current_page_item">li><a href="Todo sobre nosotros.html#"3" title="">Todo sobre nosotros</a></li>
-				<li><a href="#" accesskey="5" title="">Cont√°ctanos</a></li>
+				<li><a href="Datos.html#" accesskey="3" title="">todo sobre nosotros</a></li>
+				<li class="current_page_item"><a href="contactos.html" accesskey="4" title="">Contacta con nosotros</a></li>
 			</ul>
 		</div>
 	</div>
@@ -46,8 +46,8 @@ Released   : 20130902
 		</div>
 		<div id="welcome">
 			<div class="title">
-				<h2>Todo sobre nosotros</h2>
-				<span class="byline">(Licenciado en timadura de pelo)</span>
+				<h2>Contactanos</h2>
+				<span class="byline">No se admiten quejas ni devoluciones</span>
 			</div>
 			<p>This is <strong>Privy</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p>
 			<ul class="actions">
@@ -82,10 +82,7 @@ Released   : 20130902
 				</li>
 			</ul>
 		</div>
-		<div id="copyright">
-			<span>&copy; Untitled. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a></span>
-			<span>Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</span>
-		</div>
+		<p> Esta p·gina web est· en desarroyo, es posible que salga estafado
 	</div>
 </div>
 </body>
