--- a/facturas.html
+++ b/facturas.html
@@ -35,8 +35,8 @@ Released   : 20130902
 			<ul>
 				<li><a href="index.html#"1" title="">Página principal</a></li>
 				<li class="current_page_item"><a href="facturas.html#"2" title="">Tarifas</a></li>
-				<li><a href="#" accesskey="3" title="">Todo sobre nosotros</a></li>
-				<li><a href="#" accesskey="5" title="">Contáctanos</a></li>
+				<li><a href="Datos.html#" accesskey="3" title="">todo sobre nosotros</a></li>
+				<li><a href="contactos.html#"4" title="">Contacta con nosotros</a></li>
 			</ul>
 		</div>
 	</div>
@@ -49,43 +49,37 @@ Released   : 20130902
 				<h2>TARIFAS</h2>
 				<span class="byline">Los peores productos calidad precio</span>
 			</div>
-			<p>This is <strong>Privy</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p>
-			<ul class="actions">
-				<li><a href="#" class="button">Etiam posuere</a></li>
-			</ul>
+			<p>Si quiere ser timado, estafado, ignorado y arruinado por nosotros, está en la página web de ventas de marisco adecuada. Le recordamos que nuestros precios son los menos asequibles del mercado pero no importa, usted está en su derecho de hcer lo que desee con su dinero </p>
 		</div>
 		<div id="featured">
 			<div class="title">
-				<h2>Maecenas lectus sapien</h2>
-				<span class="byline">Integer sit amet aliquet pretium</span>
+				<h2>Ofertas del día</h2>
+				<span class="byline">actualizadas cada día</span>
 			</div>
 			<ul class="style1">
 				<li class="first">
-					<p class="date"><a href="#">Jan<b>05</b></a></p>
-					<h3>Amet sed volutpat mauris</h3>
-					<p><a href="#">Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Etiam non felis. Donec ut ante.</a></p>
+					<p><h2>CIGALA Nº1 / 2Kg<a>89,99€/ la caja</a></h2></p>
+					<img src="images/cigala.jpg" >
+					<p><a href="has sido timado.html">Haz aquí tu pedido</a></p>
 				</li>
 				<li>
-					<p class="date"><a href="#">Jan<b>03</b></a></p>
-					<h3>Sagittis diam dolor amet</h3>
-					<p><a href="#">Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie. Donec leo, vivamus fermentum nibh in augue praesent congue rutrum.</a></p>
+					<p><h2> Pulpo Cocinado 3Kg<a>64,99€</a></h2></p>
+					<img src="images/pulpo.jpg" >
+					<p><a href="has sido timado.html">Haz aquí tu pedido</a></p>
 				</li>
 				<li>
-					<p class="date"><a href="#">Jan<b>01</b></a></p>
-					<h3>Amet sed volutpat mauris</h3>
-					<p><a href="#">Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Etiam non felis. Donec ut ante.</a></p>
+					<p><h2> Salmón pieza 1Kg<a>42,90€</a></h2></p>
+					<img src="images/salmon.jpg" >
+					<p><a href="has sido timado.html">Haz aquí tu pedido</a></p>
 				</li>
 				<li>
-					<p class="date"><a href="#">Dec<b>31</b></a></p>
-					<h3>Sagittis diam dolor amet</h3>
-					<p><a href="#">Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie. Donec leo, vivamus fermentum nibh in augue praesent congue rutrum.</a></p>
+					<p><h2>Gamba de Huelva 1Kg <a>32,50€/ la caja</a></h2></p>
+					<img src="images/gamba.jpg" >
+					<p><a href="has sido timado.html">Haz aquí tu pedido</a></p>
 				</li>
 			</ul>
 		</div>
-		<div id="copyright">
-			<span>&copy; Untitled. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a></span>
-			<span>Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</span>
-		</div>
+		<p> Esta página web está en desarroyo, es posible que salga estafado
 	</div>
 </div>
 </body>
