--- a/index.html
+++ b/index.html
@@ -27,18 +27,19 @@ Released   : 20130902
 <div id="page" class="container">
 	<div id="header">
 		<div id="logo">
-			<img src="images/pablorecio.jpg" alt="" />
+			<img src="images/pablorecio.jpg" alt= />
 			<h1><a href="#">Mariscos Pablo</a></h1>
 			<span> <a href="" rel="nofollow"></a></span>
 		</div>
 		<div id="menu">
 			<ul>
-				<li class="current_page_item"><a href="#" accesskey="1" title="">Página principal</a></li>
+				<li class="current_page_item"><a href="index.html" accesskey="1" title="">Página principal</a></li>
 				<li><a href="facturas.html#"2" title="">Tarifas</a></li>
-				<li><a href="#" accesskey="3" title="">Todo sobre nosotros</a></li>
-				<li><a href="#" accesskey="5" title="">Contáctanos</a></li>
+				<li><a href="Datos.html#" accesskey="3" title="">todo sobre nosotros</a></li>
+				<li><a href="contactos.html#"4" title="">Contacta con nosotros</a></li>
 			</ul>
-		</div>
+		</div id="información">
+			<u1>
 	</div>
 	<div id="main">
 		<div id="banner">
@@ -47,12 +48,9 @@ Released   : 20130902
 		<div id="welcome">
 			<div class="title">
 				<h2>Mariscos Pablo lo de nosotros lo más caro</h2>
-				<span class="byline">Los peores productos calidad precio</span>
+				<span class="byline">Alto conocimineto en timar al cliente</span>
 			</div>
-			<p>This is <strong>Privy</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p>
-			<ul class="actions">
-				<li><a href="#" class="button">Etiam posuere</a></li>
-			</ul>
+			<p>Esta página web es una de las más prestigiosas y más seguras del puesto 3 el que se encuentra en la lista de las mejores empresas distribuidoras de marisco del mundo. Si no se fia de nosotros, compruébelo usted mismo haciendo un pedido o preguntando a nuestros compradores abituales</p>
 		</div>
 		<div id="featured">
 			<div class="title">
@@ -82,10 +80,7 @@ Released   : 20130902
 				</li>
 			</ul>
 		</div>
-		<div id="copyright">
-			<span>&copy; Untitled. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a></span>
-			<span>Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</span>
-		</div>
+		<p> Esta página web está en desarroyo, es posible que salga estafado
 	</div>
 </div>
 </body>
