solución de tildes

--- a/Datos.html
+++ b/Datos.html
@@ -33,7 +33,7 @@ Released   : 20130902
 		</div>
 		<div id="menu">
 			<ul>
-				<li><a href="index.html#" accesskey="1" title="">Página principal</a></li>
+				<li><a href="index.html#" accesskey="1" title="">PÃ¡gina principal</a></li>
 				<li><a href="facturas.html#"2" title="">Tarifas</a></li>
 				<li class="current_page_item"><a href="Datos.html#" accesskey="3" title="">todo sobre nosotros</a></li>
 				<li><a href="contactos.html"4" title="">Contacta con nosotros</a></li>
@@ -46,13 +46,10 @@ Released   : 20130902
 		</div>
 		<div id="welcome">
 			<div class="title">
-				<h2>¿Qué debe saber de nosotros?</h2>
+				<h2>Â¿QuÃ© debe saber de nosotros?</h2>
 				<span class="byline">Varias decadas al servicio del "marisco"</span>
 			</div>
 			<p>Mejor que no sepa nada o tendremos que enviarle a la guardia civil para que lo meta de por vida en el trullo</p>
-			<ul class="actions">
-				<li><a href="#" class="button">Etiam posuere</a></li>
-			</ul>
 		</div>
 		<div id="featured">
 			<div class="title">
@@ -61,28 +58,16 @@ Released   : 20130902
 			</div>
 			<ul class="style1">
 				<li class="first">
-					<p class="date"><a href="#">Jan<b>05</b></a></p>
 					<h3>Amet sed volutpat mauris</h3>
 					<p><a href="#">Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Etiam non felis. Donec ut ante.</a></p>
 				</li>
 				<li>
-					<p class="date"><a href="#">Jan<b>03</b></a></p>
-					<h3>Sagittis diam dolor amet</h3>
-					<p><a href="#">Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie. Donec leo, vivamus fermentum nibh in augue praesent congue rutrum.</a></p>
-				</li>
-				<li>
-					<p class="date"><a href="#">Jan<b>01</b></a></p>
-					<h3>Amet sed volutpat mauris</h3>
-					<p><a href="#">Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Etiam non felis. Donec ut ante.</a></p>
-				</li>
-				<li>
-					<p class="date"><a href="#">Dec<b>31</b></a></p>
 					<h3>Sagittis diam dolor amet</h3>
 					<p><a href="#">Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie. Donec leo, vivamus fermentum nibh in augue praesent congue rutrum.</a></p>
 				</li>
 			</ul>
 		</div>
-		<p> Esta página web está en desarroyo, es posible que salga estafado
+		<p> Esta pÃ¡gina web estÃ¡ en desarroyo, es posible que salga estafado
 	</div>
 </div>
 </body>
