--- a/contactos.html
+++ b/contactos.html
@@ -61,9 +61,8 @@ Released   : 20130902
 					<p> En nuestro restaurante encontrará la peor calidad precio pero también la mejor calidad de la ciudad en marisco fresco <a href="http://www.findglocal.com/ES/C%C3%B3rdoba/157346218121096/Pescaderias-Pablo?__cf_chl_captcha_tk__=a79e9367ccf555e03fd1900a7bd4a1384e293073-1608028096-0-AcHqS1IArA4IjAsXI2gWfLfVnsMBAQe71Hz-XBC6yH-V9zZFW3_f8DF1oNgq8LBUnal-6alMwqpt8aVBItQQDXacbOBiyfLj6EPFGGQHh8ayW51kaVJ_BrndiQCpyVy8fi9MwE4NG2G98qj4_aGckWjtfOmujwupModBAA3natS80-yiSExTsh4mqPbdy5WYp0mcA1gJhvwHcKU75HFJgch-Pz2WQMTyTlA7PCz9vmHCLwYYE7EY_SLLkqAmKrCOx_3bU6XXLDSB9jaMslBnw1L_nqGjIs1d9UhyyVlOPBQ4Nn8EDgxFlSIeTi-8vDKtVAn9HcbO2yh185abQc3g_acRGxlh_--_fJVIOCj9xGJs-xInZuW1KyYOXFxxSxIga04LaazSTyw_EbY_CGxY8RQVtRa-7LFzYEq-KPEGCIsz2q4r4iEdKh0CbQVv4Jj3UCtrEqj23BGUIDJQsPHlHsER1MDPSVwCrFLgocYUInGUVGOkgqoDsPkcbzNheKMHKZ7wwH935hL5UunMu2hysgLcp7uJAJFgg466YQQ9V3z_waFOsXHQ8vWQ7AZ5GtP06I_uSHVXdwC2dqu8ordGzwERxBDgVsUUFT9Yi8OYj6UBaZK1Vh_D2SYcYL64J6Rg9D-KEZIDrRaYZr4hnKWujFE">puedes informarte aquí</a></p>
 				</li>
 				<li>
-					<p class="date"><a href="#">Jan<b>03</b></a></p>
-					<h3>Sagittis diam dolor amet</h3>
-					<p><a href="#">Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie. Donec leo, vivamus fermentum nibh in augue praesent congue rutrum.</a></p>
+					<h3> Encargos al por mayor </h3>
+					<p><a href="formulario.html">Nuestros encargos </a></p>
 				</li>
 				<li>
 					<h3>Problemas en la compra </h3>
