--- a/Datos.html
+++ b/Datos.html
@@ -12,11 +12,9 @@ Released   : 20130902
 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Mariscos Pablo</title>
-<meta name="keywords" content="" />
-<meta name="description" content="" />
-<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
+	<meta charset="utf-8">
+    <title>Mariscos Pablo</title>
+    <link rel="shortcut icon" href="images/pablorecio.jpg" type="image/x-icon">
 <link href="default.css" rel="stylesheet" type="text/css" media="all" />
 <link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
 
@@ -67,7 +65,7 @@ Released   : 20130902
 				</li>
 			</ul>
 		</div>
-		<p> Esta página web está en desarroyo, es posible que salga estafado
+		<p><a> Esta página web está en desarroyo, es posible que salga estafado </a></p>
 	</div>
 </div>
 </body>
