--- a/contactos.html
+++ b/contactos.html
@@ -12,11 +12,9 @@ Released   : 20130902
 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Mariscos Pablo</title>
-<meta name="keywords" content="" />
-<meta name="description" content="" />
-<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
+	<meta charset="utf-8">
+    <title>Mariscos Pablo</title>
+    <link rel="shortcut icon" href="images/pablorecio.jpg" type="image/x-icon">
 <link href="default.css" rel="stylesheet" type="text/css" media="all" />
 <link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
 
@@ -46,7 +44,7 @@ Released   : 20130902
 		</div>
 		<div id="welcome">
 			<div class="title">
-				<h2>Contactanos</h2>
+				<h2>Contáctanos</h2>
 				<span class="byline">No se admiten quejas ni devoluciones</span>
 			</div>
 			<p> En mariscos pablo estamos a la disposición del cliente, a cualquier duda, encargo o reserva en nuestro restaurante. Para cada una de ellas, hemos dedicado un apartado para su completa información. </p>
@@ -57,25 +55,43 @@ Released   : 20130902
 			</div>
 			<ul class="style1">
 				<li class="first">
-					<h3>Todo sobre nuestro restaurante</h3>
-					<p> En nuestro restaurante encontrará la peor calidad precio pero también la mejor calidad de la ciudad en marisco fresco <a href="http://www.findglocal.com/ES/C%C3%B3rdoba/157346218121096/Pescaderias-Pablo?__cf_chl_captcha_tk__=a79e9367ccf555e03fd1900a7bd4a1384e293073-1608028096-0-AcHqS1IArA4IjAsXI2gWfLfVnsMBAQe71Hz-XBC6yH-V9zZFW3_f8DF1oNgq8LBUnal-6alMwqpt8aVBItQQDXacbOBiyfLj6EPFGGQHh8ayW51kaVJ_BrndiQCpyVy8fi9MwE4NG2G98qj4_aGckWjtfOmujwupModBAA3natS80-yiSExTsh4mqPbdy5WYp0mcA1gJhvwHcKU75HFJgch-Pz2WQMTyTlA7PCz9vmHCLwYYE7EY_SLLkqAmKrCOx_3bU6XXLDSB9jaMslBnw1L_nqGjIs1d9UhyyVlOPBQ4Nn8EDgxFlSIeTi-8vDKtVAn9HcbO2yh185abQc3g_acRGxlh_--_fJVIOCj9xGJs-xInZuW1KyYOXFxxSxIga04LaazSTyw_EbY_CGxY8RQVtRa-7LFzYEq-KPEGCIsz2q4r4iEdKh0CbQVv4Jj3UCtrEqj23BGUIDJQsPHlHsER1MDPSVwCrFLgocYUInGUVGOkgqoDsPkcbzNheKMHKZ7wwH935hL5UunMu2hysgLcp7uJAJFgg466YQQ9V3z_waFOsXHQ8vWQ7AZ5GtP06I_uSHVXdwC2dqu8ordGzwERxBDgVsUUFT9Yi8OYj6UBaZK1Vh_D2SYcYL64J6Rg9D-KEZIDrRaYZr4hnKWujFE">puedes informarte aquí</a></p>
+					<h3>Todo sobre nuestro mercado</h3>
+					<p> En nuestro mercado encontrará la peor calidad precio pero también la mejor calidad de la ciudad en marisco fresco. Podrá encontrarnos en la Avenida de los Molinos 10/ Córdoba/ 14001. En el siguiente enlace se detallan los horarios y nuestra localización precisa. <a href="http://www.findglocal.com/ES/C%C3%B3rdoba/157346218121096/Pescaderias-Pablo?__cf_chl_captcha_tk__=a79e9367ccf555e03fd1900a7bd4a1384e293073-1608028096-0-AcHqS1IArA4IjAsXI2gWfLfVnsMBAQe71Hz-XBC6yH-V9zZFW3_f8DF1oNgq8LBUnal-6alMwqpt8aVBItQQDXacbOBiyfLj6EPFGGQHh8ayW51kaVJ_BrndiQCpyVy8fi9MwE4NG2G98qj4_aGckWjtfOmujwupModBAA3natS80-yiSExTsh4mqPbdy5WYp0mcA1gJhvwHcKU75HFJgch-Pz2WQMTyTlA7PCz9vmHCLwYYE7EY_SLLkqAmKrCOx_3bU6XXLDSB9jaMslBnw1L_nqGjIs1d9UhyyVlOPBQ4Nn8EDgxFlSIeTi-8vDKtVAn9HcbO2yh185abQc3g_acRGxlh_--_fJVIOCj9xGJs-xInZuW1KyYOXFxxSxIga04LaazSTyw_EbY_CGxY8RQVtRa-7LFzYEq-KPEGCIsz2q4r4iEdKh0CbQVv4Jj3UCtrEqj23BGUIDJQsPHlHsER1MDPSVwCrFLgocYUInGUVGOkgqoDsPkcbzNheKMHKZ7wwH935hL5UunMu2hysgLcp7uJAJFgg466YQQ9V3z_waFOsXHQ8vWQ7AZ5GtP06I_uSHVXdwC2dqu8ordGzwERxBDgVsUUFT9Yi8OYj6UBaZK1Vh_D2SYcYL64J6Rg9D-KEZIDrRaYZr4hnKWujFE">puedes informarte aquí</a></p>
 				</li>
 				<li>
 					<h3> Encargos al por mayor </h3>
-					<p><a href="formulario.html">Nuestros encargos </a></p>
+					<p>Alto conocimiento en el trato con el cliente en nuestro amplio reparto. Nuestro orario de reparto se ajusta a todas las necesidades del cliente. Solo hacemos reparto a empresas y a ciertos eventos (para saber cuales contacte con nosotros) La venta al público se realiza en nuestro mercado. <a> Pedidos 957.486.331</a></p>
 				</li>
 				<li>
 					<h3>Problemas en la compra </h3>
-					<p><a>  Si a la hora de realizar su pedido ocurriese algún fallo permanente en el sistema contacte con nosotros a través de los siguientes enlaces. </a></p>
+					<p> Si los teléfonos proporcionados no satisfacen vuestras dudas o si a la hora de realizar su pedido ocurriese algún fallo permanente en el sistema, contacte con nosotros a través de los siguientes enlaces:</p>
 				</li>
 				<li>
 					<h3>Telefono móvil: <a> 954 482 660 </a>
 					Facebook: <a href="https://www.facebook.com/pescaderiaspablo"> Pescadería Pablo </a></h3>
-					<p></p>
+					<p> Si tienes alguna duda más envíanos un correo </p>
 				</li>
+				<form action="/my-handling-form-page" method="post">
+				<ul>
+				<li>
+					<label for="name">Nombre:</label>
+					<input type="text" id="name" name="user_name" />
+				</li>
+				<li>
+					<label for="mail">Correo electrónico:</label>
+					<input type="email" id="mail" name="user_email" />
+				</li>
+				<li>
+					<label for="msg">Mensaje:</label>
+					<textarea id="msg" name="user_message"></textarea>
+				</li>
+				<li class="button">
+					<button type="submit"><a href="has sido timado.html">Envía aquí tu mensaje</button>
+				</li>
+			</form>
 			</ul>
 		</div>
-		<p> Esta página web está en desarroyo, es posible que salga estafado
+		<p><a> Esta página web está en desarroyo, es posible que salga estafado </p></a>
 	</div>
 </div>
 </body>
