--- a/has sido timado.html
+++ b/has sido timado.html
@@ -1,3 +1,10 @@
-<p>LO SENTIMOS PERO EN ESTOS MOMENTOS NO PODEMOS TIMARLE, INTÉNTELO MÁS TARDE</p>
-<img src="images/espere.gif" alt="" class="image-full" />
- <p><a href="contactos.html">Si el problema persiste contacte con nosotros</a></p>
+<head>
+	<meta charset="utf-8">
+    <title>Mariscos Pablo</title>
+    <link rel="shortcut icon" href="images/pablorecio.jpg" type="image/x-icon">
+</head>
+<body>
+	<p>LO SENTIMOS PERO EN ESTOS MOMENTOS NO PODEMOS TIMARLE, INTÉNTELO MÁS TARDE</p>
+	<img src="images/espere.gif" alt="" class="image-full" />
+	<p><a href="contactos.html">Si el problema persiste contacte con nosotros</a></p>
+</body>
