--- a/Datos.html
+++ b/Datos.html
@@ -47,21 +47,23 @@ Released   : 20130902
 				<h2>¿Qué debe saber de nosotros?</h2>
 				<span class="byline">Varias decadas al servicio del "marisco"</span>
 			</div>
-			<p>Mejor que no sepa nada o tendremos que enviarle a la guardia civil para que lo meta de por vida en el trullo</p>
+			<p>En mariscos pablo llevamos varias décadas a la disposición del cliente, con amplios conocimientros en el sector del marisco, realizando ventas a grandes superficies como Lidl, Alcampo y Dia, siempre con nuestra pesca sostenible certificada </p>
 		</div>
 		<div id="featured">
 			<div class="title">
-				<h2>Maecenas lectus sapien</h2>
-				<span class="byline">Integer sit amet aliquet pretium</span>
+				<h2>Nuestra historia</h2>
+				<p> Mariscos Pablo se creó en 1976, antes de ello, solo heramos una familia que se ganaba la vida en el mar, pero gracias a nuestros esfuerzos y nuestra amplia calidad en nuestos productos, pudimos alcanzar en cuestión de una década un gran prestigio que es ahora reconocido por grandes marcas de supermercados como Lidl, Dia y Alcampo. 
+				Gracias a nuestros grandes esfuerzos, pudimos hacer que nuestro marisco llegase a más personas a través de nuestro mercado público en Córdoba y realizando grandes pedidos a altas cadenas de restaurantes.</p>
+				<img src="images/pescadería.jpg" alt="" class="image-full" />
 			</div>
 			<ul class="style1">
 				<li class="first">
-					<h3>Amet sed volutpat mauris</h3>
-					<p><a href="#">Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Etiam non felis. Donec ut ante.</a></p>
+					<h3>Nuestras grandes ventas</h3>
+					<p> Realizamos encargos a grandes restaurantes dedicados al marisco como: Restaurante los Mariscos (Madrid), Marisquería Mariscos Carrillo (Huelva) y muchos más. </p>
 				</li>
 				<li>
-					<h3>Sagittis diam dolor amet</h3>
-					<p><a href="#">Etiam non felis. Donec ut ante. In id eros. Suspendisse lacus turpis, cursus egestas at sem. Mauris quam enim, molestie. Donec leo, vivamus fermentum nibh in augue praesent congue rutrum.</a></p>
+					<h3>Nuestra pesca sostenible</h3>
+					<p>Nuetra pesca se caracteriza por ser sostenible y no comprometer así a la desaparición de especies, para a su vez no causar un impacto negativo sobre otras especies dentro del ecosistema. Todo nuestro marisco está certificado con la etiqueta de pescado sostenible</p>
 				</li>
 			</ul>
 		</div>
