--- a/contactos.html
+++ b/contactos.html
@@ -44,10 +44,10 @@ Released   : 20130902
 		</div>
 		<div id="welcome">
 			<div class="title">
-				<h2>Contáctanos</h2>
+				<h2>CONTÁCTANOS</h2>
 				<span class="byline">No se admiten quejas ni devoluciones</span>
 			</div>
-			<p> En mariscos pablo estamos a la disposición del cliente, a cualquier duda, encargo o reserva en nuestro restaurante. Para cada una de ellas, hemos dedicado un apartado para su completa información. </p>
+			<p> En mariscos pablo estamos a la disposición del cliente, a cualquier duda o encargo. Para cada una de ellas, hemos dedicado un apartado para su completa información. </p>
 		</div>
 		<div id="featured">
 			<div class="title">
@@ -67,7 +67,7 @@ Released   : 20130902
 					<p> Si los teléfonos proporcionados no satisfacen vuestras dudas o si a la hora de realizar su pedido ocurriese algún fallo permanente en el sistema, contacte con nosotros a través de los siguientes enlaces:</p>
 				</li>
 				<li>
-					<h3>Telefono móvil: <a> 954 482 660 </a>
+					<h3>Telefono móvil: <a> 957 48 63 31 </a>
 					Facebook: <a href="https://www.facebook.com/pescaderiaspablo"> Pescadería Pablo </a></h3>
 					<p> Si tienes alguna duda más envíanos un correo </p>
 				</li>
