ahora si que he terminado

--- a/has sido timado.html
+++ b/has sido timado.html
@@ -4,7 +4,7 @@
     <link rel="shortcut icon" href="images/pablorecio.jpg" type="image/x-icon">
 </head>
 <body>
-	<p>LO SENTIMOS PERO EN ESTOS MOMENTOS NO PODEMOS TIMARLE, INT…NTELO M¡S TARDE</p>
+	<p>LO SENTIMOS PERO EN ESTOS MOMENTOS NO PODEMOS TIMARLE, INT√âNTELO M√ÅS TARDE</p>
 	<img src="images/espere.gif" alt="" class="image-full" />
 	<p><a href="contactos.html">Si el problema persiste contacte con nosotros</a></p>
 </body>
